lox-tests/tests/call/nil.stderr
ERROR: Can only call objects of type function or class, not nil
 --> 1:1
  |
1 | nil(); // expect runtime error: Can only call functions and classes.
  | ^---^
